--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </style>
 
     <!-- Firebase SDK'sını ekleyin -->
-    <script src="https://www.gstatic.com/firebasejs/9.VERSION.X/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.VERSION.X/firebase-database-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-database.js"></script>
 </head>
 <body>
     <h1>Şarkı Listesi</h1>
@@ -45,6 +45,50 @@
     <div id="songHtmlContainer">
         <!-- Şarkı HTML içeriği buraya yüklenecek -->
     </div>
+
+    <script>
+        // Firebase yapılandırma bilgileri
+        const firebaseConfig = {
+            apiKey: "YOUR_API_KEY",  // Firebase Console'dan aldığınız API Key'i buraya yazın
+            authDomain: "saganak-24ec8.firebaseapp.com",
+            databaseURL: "https://saganak-24ec8.firebaseio.com",
+            projectId: "saganak-24ec8",
+            storageBucket: "saganak-24ec8.appspot.com",
+            messagingSenderId: "394236997954",
+            appId: "1:394236997954:web:c49ebc99d98722e31b98db",
+            measurementId: "YOUR_MEASUREMENT_ID"  // (Eğer varsa, bu değeri Firebase Console'dan alabilirsiniz)
+        };
+
+        // Firebase'i başlat
+        const app = firebase.initializeApp(firebaseConfig);
+        const database = firebase.database();
+
+        // Şarkı listesini çek
+        const songsRef = database.ref('songs'); // 'songs' nodu, veritabanında şarkılar için kullandığınız referans
+        songsRef.on('value', function(snapshot) {
+            const songs = snapshot.val();
+            const songsList = document.getElementById("songsList");
+            songsList.innerHTML = ""; // Listeyi sıfırlayın
+
+            // Şarkıları listeye ekle
+            for (let songId in songs) {
+                let li = document.createElement("li");
+                li.textContent = songs[songId].Name;  // Şarkının adını listeye ekleyin
+                li.onclick = () => loadSongDetails(songId);
+                songsList.appendChild(li);
+            }
+        });
+
+        // Şarkı detaylarını yükle
+        function loadSongDetails(songId) {
+            const songRef = database.ref('songs/' + songId);
+            songRef.once('value', function(snapshot) {
+                const songData = snapshot.val();
+                const songHtmlContainer = document.getElementById("songHtmlContainer");
+                songHtmlContainer.innerHTML = songData.Html;  // Şarkı HTML içeriğini yükleyin
+            });
+        }
+    </script>
 
     <script src="script.js"></script>
 </body>
