--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
     <script>
         // Firebase yapılandırma bilgileri
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",  // Firebase Console'dan aldığınız API Key'i buraya yazın
+            apiKey: "AIzaSyDAhFPe_j750iRzfv96xHAMX488sj6xBTs",
             authDomain: "saganak-24ec8.firebaseapp.com",
-            databaseURL: "https://saganak-24ec8.firebaseio.com",
+            databaseURL: "https://saganak-24ec8-default-rtdb.europe-west1.firebasedatabase.app",
             projectId: "saganak-24ec8",
-            storageBucket: "saganak-24ec8.appspot.com",
+            storageBucket: "saganak-24ec8.firebasestorage.app",
             messagingSenderId: "394236997954",
             appId: "1:394236997954:web:c49ebc99d98722e31b98db",
-            measurementId: "YOUR_MEASUREMENT_ID"  // (Eğer varsa, bu değeri Firebase Console'dan alabilirsiniz)
+            measurementId: "G-S1C78RYR9Z"
         };
 
         // Firebase'i başlat
