--- a/index.html
+++ b/index.html
@@ -5,7 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sahne Uygulaması</title>
     <style>
-        /* Stil kısmı burada kalabilir */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f4f4f4;
+        }
+        #songsList {
+            list-style-type: none;
+            padding: 0;
+        }
+        #songsList li {
+            cursor: pointer;
+            padding: 10px;
+            border-bottom: 1px solid #ddd;
+            background-color: #fff;
+            margin-bottom: 5px;
+        }
+        #songsList li:hover {
+            background-color: #e9e9e9;
+        }
+        #songHtmlContainer {
+            margin-top: 20px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            background-color: #fff;
+        }
+        h1 {
+            color: #333;
+        }
     </style>
     <!-- Firebase SDK'lerini ekleyin -->
     <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-app.js"></script>
@@ -42,8 +69,9 @@
 
             // Şarkıları listeye ekle
             for (let songId in songs) {
+                const song = songs[songId];
                 let li = document.createElement("li");
-                li.textContent = songs[songId].Name;
+                li.textContent = song.Name; // Şarkı ismini göster
                 li.onclick = () => selectSong(songId);
                 songsList.appendChild(li);
             }
@@ -67,7 +95,7 @@
             songRef.once('value', function(snapshot) {
                 const songData = snapshot.val();
                 const songHtmlContainer = document.getElementById("songHtmlContainer");
-                songHtmlContainer.innerHTML = songData.Html;
+                songHtmlContainer.innerHTML = songData.Html || 'Şarkı HTML içeriği yok'; // Şarkı HTML içeriğini yükle
             });
         }
     </script>
