--- a/index.html
+++ b/index.html
@@ -10,19 +10,13 @@
             margin: 20px;
             background-color: #f4f4f4;
         }
-        #songsList {
-            list-style-type: none;
-            padding: 0;
-        }
-        #songsList li {
-            cursor: pointer;
+        select {
             padding: 10px;
-            border-bottom: 1px solid #ddd;
-            background-color: #fff;
-            margin-bottom: 5px;
-        }
-        #songsList li:hover {
-            background-color: #e9e9e9;
+            font-size: 16px;
+            width: 100%;
+            margin-bottom: 20px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
         }
         #songHtmlContainer {
             margin-top: 20px;
@@ -41,7 +35,12 @@
 </head>
 <body>
     <h1>Şarkı Listesi</h1>
-    <ul id="songsList"></ul>
+    
+    <!-- Açılır Menü -->
+    <select id="songsDropdown" onchange="showSongHtml(this.value)">
+        <option value="">Bir şarkı seçin</option>
+    </select>
+
     <div id="songHtmlContainer">
         <!-- Şarkı HTML içeriği buraya yüklenecek -->
     </div>
