--- a/index.html
+++ b/index.html
@@ -1,106 +1,85 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sahne Uygulaması</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      background-color: #f4f4f4;
-    }
-    #songsList {
-      list-style-type: none;
-      padding: 0;
-    }
-    #songsList li {
-      cursor: pointer;
-      padding: 10px;
-      border-bottom: 1px solid #ddd;
-      background-color: #fff;
-      margin-bottom: 5px;
-    }
-    #songsList li:hover {
-      background-color: #e9e9e9;
-    }
-    #songHtmlContainer {
-      margin-top: 20px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      background-color: #fff;
-    }
-    h1 {
-      color: #333;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sahne Uygulaması</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f4f4f4;
+        }
+        #songsList {
+            list-style-type: none;
+            padding: 0;
+        }
+        #songsList li {
+            cursor: pointer;
+            padding: 10px;
+            border-bottom: 1px solid #ddd;
+            background-color: #fff;
+            margin-bottom: 5px;
+        }
+        #songsList li:hover {
+            background-color: #e9e9e9;
+        }
+        #songHtmlContainer {
+            margin-top: 20px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            background-color: #fff;
+        }
+        h1 {
+            color: #333;
+        }
+    </style>
+
+    <!-- Firebase SDK'sını ekleyin -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
 </head>
 <body>
-  <h1>Şarkı Listesi</h1>
-  <ul id="songsList"></ul>
-  <div id="songHtmlContainer">
-    <!-- Şarkı HTML içeriği buraya yüklenecek -->
-  </div>
+    <h1>Şarkı Listesi</h1>
+    <ul id="songsList"></ul>
+    <div id="songHtmlContainer">
+        <!-- Şarkı HTML içeriği buraya yüklenecek -->
+    </div>
 
-  <!-- Firebase SDK'sını ekleyin -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.5.0/firebase-app.js";
-    import { getDatabase, ref, get, child } from "https://www.gstatic.com/firebasejs/11.5.0/firebase-database.js";
-
-    // Firebase yapılandırması
-    const firebaseConfig = {
-      apiKey: "AIzaSyDAhFPe_j750iRzfv96xHAMX488sj6xBTs",
-      authDomain: "saganak-24ec8.firebaseapp.com",
-      databaseURL: "https://saganak-24ec8-default-rtdb.europe-west1.firebasedatabase.app",
-      projectId: "saganak-24ec8",
-      storageBucket: "saganak-24ec8.firebasestorage.app",
-      messagingSenderId: "394236997954",
-      appId: "1:394236997954:web:50917497818fe1761b98db",
-      measurementId: "G-87BQBF6BJ1"
-    };
-
-    // Firebase'i başlat
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
-
-    // Şarkı listesini al
-    function getSongs() {
-      const dbRef = ref(db, 'songs');
-      get(dbRef).then((snapshot) => {
-        if (snapshot.exists()) {
-          const songsData = snapshot.val();
-          displaySongs(songsData);
-        } else {
-          console.log("Veri bulunamadı.");
-        }
-      }).catch((error) => {
-        console.error("Veri çekme hatası: " + error);
-      });
-    }
-
-    // Şarkı listesini görüntüle
-    function displaySongs(songs) {
-      const songsList = document.getElementById("songsList");
-      songsList.innerHTML = '';  // Mevcut listeyi temizle
-      for (const songId in songs) {
-        const song = songs[songId];
-        const li = document.createElement("li");
-        li.textContent = song.Name;
-        li.onclick = function() {
-          showSongHtml(song.Html);
+    <script>
+        // Firebase yapılandırmasını burada yerleştirin
+        const firebaseConfig = {
+            apiKey: "AIzaSyDAhFPe_j750iRzfv96xHAMX488sj6xBTs",
+            authDomain: "saganak-24ec8.firebaseapp.com",
+            databaseURL: "https://saganak-24ec8-default-rtdb.europe-west1.firebasedatabase.app",
+            projectId: "saganak-24ec8",
+            storageBucket: "saganak-24ec8.firebasestorage.app",
+            messagingSenderId: "394236997954",
+            appId: "1:394236997954:web:50917497818fe1761b98db",
+            measurementId: "G-87BQBF6BJ1"
         };
-        songsList.appendChild(li);
-      }
-    }
 
-    // Şarkı içeriğini göster
-    function showSongHtml(htmlContent) {
-      const songHtmlContainer = document.getElementById("songHtmlContainer");
-      songHtmlContainer.innerHTML = htmlContent;
-    }
+        // Firebase'i başlat
+        const app = firebase.initializeApp(firebaseConfig);
+        const database = firebase.database();
 
-    // Şarkıları al ve listele
-    getSongs();
-  </script>
+        // Şarkıları veritabanından çekme
+        const songsRef = database.ref('Songs'); // 'Songs' veritabanındaki anahtar
+        songsRef.once('value', (snapshot) => {
+            const songs = snapshot.val();
+            const songsList = document.getElementById('songsList');
+            songsList.innerHTML = ''; // Eski verileri temizle
+
+            for (const songId in songs) {
+                const song = songs[songId];
+                const songItem = document.createElement('li');
+                songItem.textContent = song.Name; // Şarkının adı
+                songItem.onclick = () => {
+                    document.getElementById('songHtmlContainer').innerHTML = song.Html; // Şarkının HTML içeriği
+                };
+                songsList.appendChild(songItem);
+            }
+        });
+    </script>
 </body>
 </html>
