--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
         const app = firebase.initializeApp(firebaseConfig);
         const database = firebase.database();
 
-        // Şarkıları veritabanından çekme
-        const songsRef = database.ref('Songs'); // 'Songs' veritabanındaki anahtar
+        const songsRef = database.ref('Songs');
+        const selectedSongRef = database.ref('selectedSong'); // Şarkı seçim bilgisi
+
+        // Şarkı listesini çekme ve dropdown'a ekleme
         songsRef.once('value', (snapshot) => {
             const songs = snapshot.val();
             const songsDropdown = document.getElementById('songsDropdown');
@@ -73,15 +75,25 @@
                 const song = songs[songId];
                 const option = document.createElement('option');
                 option.value = songId;
-                option.textContent = song.Name; // Şarkının adı
+                option.textContent = song.Name.replace(/<\/?[^>]+(>|$)/g, ""); // HTML etiketlerini temizle
                 songsDropdown.appendChild(option);
             }
+        });
 
-            // Şarkı seçildiğinde içeriği göster
-            songsDropdown.addEventListener('change', (event) => {
-                const selectedSongId = event.target.value;
-                const selectedSong = songs[selectedSongId];
-                document.getElementById('songHtmlContainer').innerHTML = selectedSong.Html; // Şarkının HTML içeriği
+        // Şarkı seçildiğinde veriyi Firebase'e kaydet
+        document.getElementById('songsDropdown').addEventListener('change', (event) => {
+            const selectedSongId = event.target.value;
+            selectedSongRef.set(selectedSongId); // Seçilen şarkıyı Firebase'e kaydet
+        });
+
+        // Firebase'deki selectedSong değişikliklerini izleme
+        selectedSongRef.on('value', (snapshot) => {
+            const selectedSongId = snapshot.val();
+
+            // Şarkı verilerini al
+            songsRef.child(selectedSongId).once('value', (songSnapshot) => {
+                const song = songSnapshot.val();
+                document.getElementById('songHtmlContainer').innerHTML = song.Html; // Şarkı HTML içeriğini göster
             });
         });
     </script>
