--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
 </head>
 <body>
-    <h1>Şarkı Listesi</h1>
+    <h1>Grup Sağanak Setlist⚡</h1>
     <select id="songsDropdown">
         <option value="" disabled selected>Bir şarkı seçin</option>
     </select>
