--- a/index.html
+++ b/index.html
@@ -28,17 +28,18 @@
         h1 {
             color: #333;
         }
-        button {
+        .buttons {
+            margin-top: 20px;
+        }
+        .buttons button {
             padding: 10px;
-            margin-top: 10px;
-            background-color: #28a745;
-            color: white;
-            border: none;
-            border-radius: 5px;
+            font-size: 16px;
+            margin-right: 10px;
             cursor: pointer;
         }
     </style>
 
+    <!-- Firebase SDK'sını ekleyin -->
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
 </head>
@@ -50,12 +51,13 @@
     <div id="songHtmlContainer">
         <!-- Şarkı HTML içeriği buraya yüklenecek -->
     </div>
-
-    <button id="transposeUpButton">1 Ton Yukarı</button>
-    <button id="transposeDownButton">1 Ton Aşağı</button>
-    <button id="saveButton">Kaydet</button>
+    <div class="buttons">
+        <button id="transposeUpButton">Ton Yukarı</button>
+        <button id="transposeDownButton">Ton Aşağı</button>
+    </div>
 
     <script>
+        // Firebase yapılandırmasını burada yerleştirin
         const firebaseConfig = {
             apiKey: "AIzaSyDAhFPe_j750iRzfv96xHAMX488sj6xBTs",
             authDomain: "saganak-24ec8.firebaseapp.com",
@@ -63,83 +65,50 @@
             projectId: "saganak-24ec8",
             storageBucket: "saganak-24ec8.firebasestorage.app",
             messagingSenderId: "394236997954",
-            appId: "1:394236997954:web:c49ebc99d98722e31b98db",
-            measurementId: "G-S1C78RYR9Z"
+            appId: "1:394236997954:web:50917497818fe1761b98db",
+            measurementId: "G-87BQBF6BJ1"
         };
 
+        // Firebase'i başlat
         const app = firebase.initializeApp(firebaseConfig);
         const database = firebase.database();
 
         const songsRef = database.ref('Songs');
-        const selectedSongRef = database.ref('selectedSong');
-        const transposedSongRef = database.ref('transposedSong'); // Transpoze edilen şarkı
+        const selectedSongRef = database.ref('selectedSong'); // Şarkı seçim bilgisi
 
-        const chords = ['A', 'A#', 'B', 'C', 'C#', 'D', 'D#', 'E', 'F', 'F#', 'G', 'G#'];
+        // Şarkı listesini çekme ve dropdown'a ekleme
+        songsRef.once('value', (snapshot) => {
+            const songs = snapshot.val();
+            const songsDropdown = document.getElementById('songsDropdown');
+            
+            // Dropdown menüsünü temizle
+            songsDropdown.innerHTML = '<option value="" disabled selected>Bir şarkı seçin</option>';
 
-        let currentSongHtml = "";
-        let currentSongId = "";
-        
-        function transposeChord(chord, steps) {
-            const index = chords.indexOf(chord);
-            if (index === -1) return chord;
-            const newIndex = (index + steps + chords.length) % chords.length;
-            return chords[newIndex];
-        }
-
-        function transposeSong(songHtml, steps) {
-            const chordRegex = /\b(A|A#|B|C|C#|D|D#|E|F|F#|G|G#)\b/g;
-            return songHtml.replace(chordRegex, (match) => {
-                return transposeChord(match, steps);
-            });
-        }
-
-        function getSongs() {
-            songsRef.once('value', (snapshot) => {
-                const songs = snapshot.val();
-                const songsDropdown = document.getElementById('songsDropdown');
-                songsDropdown.innerHTML = '<option value="" disabled selected>Bir şarkı seçin</option>';
-
-                for (const songId in songs) {
-                    const song = songs[songId];
-                    const option = document.createElement('option');
-                    option.value = songId;
-                    option.textContent = song.Name;
-                    songsDropdown.appendChild(option);
-                }
-            });
-        }
-
-        document.getElementById('songsDropdown').addEventListener('change', (event) => {
-            currentSongId = event.target.value;
-            selectedSongRef.set(currentSongId);
+            for (const songId in songs) {
+                const song = songs[songId];
+                const option = document.createElement('option');
+                option.value = songId;
+                option.textContent = song.Name.replace(/<\/?[^>]+(>|$)/g, ""); // HTML etiketlerini temizle
+                songsDropdown.appendChild(option);
+            }
         });
 
+        // Şarkı seçildiğinde veriyi Firebase'e kaydet
+        document.getElementById('songsDropdown').addEventListener('change', (event) => {
+            const selectedSongId = event.target.value;
+            selectedSongRef.set(selectedSongId); // Seçilen şarkıyı Firebase'e kaydet
+        });
+
+        // Firebase'deki selectedSong değişikliklerini izleme
         selectedSongRef.on('value', (snapshot) => {
             const selectedSongId = snapshot.val();
-            const songRef = database.ref('Songs/' + selectedSongId);
-            songRef.once('value', (songSnapshot) => {
+
+            // Şarkı verilerini al
+            songsRef.child(selectedSongId).once('value', (songSnapshot) => {
                 const song = songSnapshot.val();
-                currentSongHtml = song.Html;
-                document.getElementById('songHtmlContainer').innerHTML = song.Html;
+                document.getElementById('songHtmlContainer').innerHTML = song.Html; // Şarkı HTML içeriğini göster
             });
         });
-
-        document.getElementById('transposeUpButton').addEventListener('click', () => {
-            currentSongHtml = transposeSong(currentSongHtml, 1);
-            document.getElementById('songHtmlContainer').innerHTML = currentSongHtml;
-        });
-
-        document.getElementById('transposeDownButton').addEventListener('click', () => {
-            currentSongHtml = transposeSong(currentSongHtml, -1);
-            document.getElementById('songHtmlContainer').innerHTML = currentSongHtml;
-        });
-
-        document.getElementById('saveButton').addEventListener('click', () => {
-            transposedSongRef.set(currentSongHtml);
-            alert('Şarkı kaydedildi!');
-        });
-
-        getSongs();
     </script>
 </body>
 </html>
